tests/ui/keyword/keyword-super.rs
fn main() {
    let super: isize; //~ ERROR cannot find item `super`
}
